// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should apply the correct styles, HTMLAttributes, and allow a ref 1`] = `
<div>
  <label
    class="rmd-label rmd-label--gap rmd-label--reversed"
  >
    Checkbox
    <span
      class="rmd-checkbox rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        check_box_outline_blank
      </span>
      <input
        autocomplete="off"
        class="rmd-hidden-input"
        id="checkbox-:r0:"
        type="checkbox"
      />
    </span>
  </label>
</div>
`;

exports[`Checkbox should apply the correct styles, HTMLAttributes, and allow a ref 2`] = `
<div>
  <label
    class="rmd-label rmd-label--gap rmd-label--reversed custom-class-name"
    style="color: white;"
  >
    Checkbox
    <span
      class="rmd-checkbox rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        check_box_outline_blank
      </span>
      <input
        autocomplete="off"
        class="rmd-hidden-input"
        id="checkbox-:r0:"
        type="checkbox"
      />
    </span>
  </label>
</div>
`;

exports[`Checkbox should apply the correct styles, HTMLAttributes, and allow a ref 3`] = `
<div>
  <label
    class="rmd-label rmd-label--gap rmd-label--reversed"
    style=""
  >
    Checkbox
    <span
      class="rmd-checkbox rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        check_box_outline_blank
      </span>
      <input
        autocomplete="off"
        class="rmd-hidden-input"
        id="custom-id"
        type="checkbox"
      />
    </span>
  </label>
</div>
`;
